--- a/chronicles/1-first-pass.adoc
+++ b/chronicles/1-first-pass.adoc
@@ -1,7 +1,7 @@
 = The First Pass
 :signedHeaders: link:../microservices/ApplicationSecurity.adoc
 :WebSocketProtocol: link:../microservices/WebSocketProtocol.adoc
-:game-on: https://game-on.org/
+:game-on: https://gameontext.org/
 
 image:../images/Progression.001.jpeg[Progression, width=95%]
 
