--- a/chronicles/11-the-sweep.adoc
+++ b/chronicles/11-the-sweep.adoc
@@ -1,8 +1,8 @@
-= Swept away... 
+= Swept away...
 :icons: font
 :signedHeaders: link:../microservices/ApplicationSecurity.adoc
 :WebSocketProtocol: link:../microservices/WebSocketProtocol.adoc
-:game-on: https://game-on.org/
+:game-on: https://gameontext.org/
 
 image:../images/Progression.011.jpeg[Progression, width=95%]
 
