--- a/chronicles/6-player-explodes.adoc
+++ b/chronicles/6-player-explodes.adoc
@@ -2,19 +2,19 @@
 :icons: font
 :signedHeaders: link:../microservices/ApplicationSecurity.adoc
 :WebSocketProtocol: link:../microservices/WebSocketProtocol.adoc
-:game-on: https://game-on.org/
+:game-on: https://gameontext.org/
 
 image:../images/Progression.006.jpeg[Progression, width=95%]
 
 Over time, the Player service, which was filling multiple roles, felt more and
 more out of place. It was already cut down once, when we moved the webapp out,
-but as we resolved some websocket traffic management issues in the mediator, 
-it became clear that we had two very different work patterns within the same service, 
+but as we resolved some websocket traffic management issues in the mediator,
+it became clear that we had two very different work patterns within the same service,
 one dealing only with CRUD operations, and one wielding data flowing over
 long-running connections. The two workloads have fundamentally different behaviors and
-scaling characteristics, and should not be housed in the same service. 
+scaling characteristics, and should not be housed in the same service.
 
-So we exploded the formerly-known-as-Player-service into: 
+So we exploded the formerly-known-as-Player-service into:
 
 * The (new) Player service (even if we keep the auth and player datastore together) is
 REST-only, with short-lived operations with well understood load/scaling characteristics.
@@ -27,6 +27,6 @@ here are harder to determine, as there are usually two long-running WebSocket co
 established for each active player.
 
 
-Breaking the two pieces apart wasn't that difficult. The two pieces were built in 
+Breaking the two pieces apart wasn't that difficult. The two pieces were built in
 separate packages, and correctly treated internally as separate/isolated modules.
 It was almost like we knew we would have to do this when we started...
