--- a/microservices/ApplicationSecurity.adoc
+++ b/microservices/ApplicationSecurity.adoc
@@ -4,7 +4,7 @@
 :toc-title:
 :toc-placement: preamble
 :toclevels: 3
-:swagger: https://game-on.org/swagger/
+:swagger: https://gameontext.org/swagger/
 :hmac-rfc: http://www.ietf.org/rfc/rfc2104
 :jwt-java: https://github.com/jwtk/jjwt
 :jsrsasign: http://kjur.github.io/jsrsasign/
