--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,7 @@
 :extend: link:walkthroughs/README.adoc
 :chronicles: link:chronicles/README.adoc
 
-https://game-on.org/[Game On!] is a throwback text-based adventure built to
+https://gameontext.org/[Game On!] is a throwback text-based adventure built to
 help you explore microservice architectures and related concepts.
 
 It can be difficult to get a full picture of what a microservices
@@ -30,7 +30,7 @@ It is infinitely extensible in a creative and fun way.::
 We know, this doesn't feel very business-y. But we've found that people are less
 likely to take risks in trying new technologies when they have their serious
 business hats on. That, and firm associations with existing applications can
-anchor thinking to traditional approaches. Anchored thinking causes problems when trying 
+anchor thinking to traditional approaches. Anchored thinking causes problems when trying
 to understand how you might design a microservice around a business function or
 domain instead of around a data model.
 
