--- a/chronicles/15-service-discovery.adoc
+++ b/chronicles/15-service-discovery.adoc
@@ -2,7 +2,7 @@
 :icons: font
 :signedHeaders: link:../microservices/ApplicationSecurity.adoc
 :WebSocketProtocol: link:../microservices/WebSocketProtocol.adoc
-:game-on: https://game-on.org/
+:game-on: https://gameontext.org/
 :amalgam8: http://amalgam8.io
 
 image:../images/Progression.015.jpeg[Progression, width=95%]
