--- a/chronicles/3-web-front-end.adoc
+++ b/chronicles/3-web-front-end.adoc
@@ -2,7 +2,7 @@
 :icons: font
 :signedHeaders: link:../microservices/ApplicationSecurity.adoc
 :WebSocketProtocol: link:../microservices/WebSocketProtocol.adoc
-:game-on: https://game-on.org/
+:game-on: https://gameontext.org/
 
 image:../images/Progression.003.jpeg[Progression, width=95%]
 
@@ -13,13 +13,13 @@ she couldn't care less about Java. We realized, in fact, that there
 was no good reason to keep making her care about Java.
 
 We therefore split the web stuff into its own (small, simple) container,
-using nginx to serve the static content. Kate was now happily able to 
+using nginx to serve the static content. Kate was now happily able to
 work at her own rate and pace on FED things without having to do
 much of anything with the Java bits. Hooray!
 
 Introducing this sadly had the added 'bonus' of requiring CORS headers
 for local development, which was a pain. The live site was saved this
-nonsense by the proxy, which created a single domain namespace for all 
+nonsense by the proxy, which created a single domain namespace for all
 of the various backend services.
 
 We added CORS filters to the app for the time being and moved on.
