--- a/chronicles/9-map-auth-hmac.adoc
+++ b/chronicles/9-map-auth-hmac.adoc
@@ -3,7 +3,7 @@
 :signedHeaders: link:../microservices/ApplicationSecurity.adoc
 :sharedLibrary: https://github.com/gameontext/signed
 :WebSocketProtocol: link:../microservices/WebSocketProtocol.adoc
-:game-on: https://game-on.org/
+:game-on: https://gameontext.org/
 
 image:../images/Progression.009.jpeg[Progression, width=95%]
 
