--- a/chronicles/README.adoc
+++ b/chronicles/README.adoc
@@ -2,7 +2,7 @@
 :icons: font
 :signedHeaders: link:../microservices/ApplicationSecurity.adoc
 :WebSocketProtocol: link:../microservices/WebSocketProtocol.adoc
-:game-on: https://game-on.org/
+:game-on: https://gameontext.org/
 
 The following sections are more like a blog than a book. Creating a new
 application from scratch using microservices is a messy business: documenting
