--- a/microservices/README.adoc
+++ b/microservices/README.adoc
@@ -7,12 +7,12 @@
 :chronicles: link:../chronicles/README.adoc
 :map: link:Map.adoc
 :goroom: https://github.com/gameontext/sample-room-go
-:maproom: https://game-on.org/swagger/
+:maproom: https://gameontext.org/swagger/
 :nodejsroom: https://github.com/gameontext/sample-room-nodejs
 :recroom: https://github.com/gameontext/gameon-room
 :security: link:ApplicationSecurty.adoc
 :simpleroom: https://github.com/gameontext/sample-java-room
-:swagger: https://game-on.org/swagger/
+:swagger: https://gameontext.org/swagger/
 :WebSocket: link:WebSocketProtocol.adoc
 :walkthroughs: link:../walkthroughs/README.adoc
 
