--- a/microservices/WebSocketProtocol.adoc
+++ b/microservices/WebSocketProtocol.adoc
@@ -4,7 +4,7 @@
 :toc-title:
 :toc-placement: preamble
 :toclevels: 3
-:swagger: https://game-on.org/swagger/
+:swagger: https://gameontext.org/swagger/
 :security: link:ApplicationSecurty.adoc
 
 WebSockets are currently used for two-way asynchronous communication between the Client
